# pyMarkovNameGenerator

./: .gitignore  README.rst  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: tests.yml
data/: LICENSE  american_cities.json  american_forenames.json  american_states.json  animal_sounds.json  art_types.json  atomic_and_subatomic_particles.json  boat_types.json  body_parts.json  breads.json  breakfast_cereals.json  brythonic_deities.json  capitol_cities.json  car_parts.json  cities_worldwide.json  clothing.json  cocktails.json  colours.json  cooking_utensils.json  countries.json  currencies.json  dance_styles.json  dinosaurs.json  diseases.json  drinks.json  dutch_forenames.json  emotions.json  fells_in_cumbria.json  flowers_common_names.json  german_towns.json  greek_islands.json  hindu_deities.json  home_appliances.json  italian_cities.json  italian_foods.json  japanese_forenames.json  languages.json  minerals.json  musical_instruments.json  mythical_humanoids.json  (+18 more)
markov_ng/: __init__.py  __main__.py  _version.py  generator.py
markovname/: __main__.py  _version.py  generator.py
markovname/data/: LICENSE  american_companies.json  american_desserts.json  american_surnames.json  animals.json  banks.json  birds_common_names.json  board_games.json  british_desserts.json  building_types.json  cakes.json  car_brands.json  chinese_cities.json  constellations_modern.json  cryptocurrencies.json  data_structures.json  dog_names.json  dragons.json  dutch_cities.json  eating_utensils.json  egyptian.json  egyptian_deities.json  english_towns.json  ethnic_groups_contemporary.json  fabrics.json  fantasy_monsters_bestiary.json  fish.json  french_forenames.json  fruit.json  furniture.json  german_forenames.json  herbs_common_names.json  hobbies.json  icelandic_forenames.json  indian_forenames.json  irish_forenames.json  italian_forenames.json  japanese_cities.json  magic_spells.json  meats.json  (+24 more)
tests/: fixtures.py  test_generator.py
