[tool.poetry]
name = "MarkovNameGenerator"
version = "0.1.0"
description = "Markov process-based name and word generator, based on Sam Twidale's Haxe code."
authors = ["bicobus <bicobus@keemail.me>"]
license = "EUPL v1.2"

[tool.poetry.dependencies]
python = "^3.9"
wcwidth = "^0.2.5"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["pycodestyle", "rope", "yapf", "flake8"], version = "^1.2.1"}
isort = "^5.9.3"
pytest = "^6.2.5"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra"
testpaths = [
    "tests"
]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
