[tool.poetry]
name = "markovname"
version = "1.0.0"
description = "Markov process-based name and word generator, based on Sam Twidale's Haxe code."
authors = ["bicobus <bicobus@keemail.me>"]
license = "EUPL-1.2"
readme = "README.rst"
homepage = "https://github.com/bicobus/pyMarkovNameGenerator"
repository = "https://github.com/bicobus/pyMarkovNameGenerator"
keywords = ["markov", "namegen", "markov-chain", "random-generation"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"
wcwidth = "^0.2.5"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
pytest = "^6.2.5"
black = "^21.9b0"

[tool.poetry.scripts]
markovname = "markovname.__main__:main"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra"
testpaths = [
    "tests"
]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
